# supysonic

./: .gitignore  AGENTS.md  Dockerfile  README-en.md  README.md  change_path.py  config.sample  debug_scan_logic.py  musicbrainzng.py  requirements.txt  run_cli.py  run_daemon.py  run_supysonic.py  setup.cfg  setup.sh
docs/: 2026-04-05_emosonic_copy_for_translation.md  client-release-engineer-integration.md  conf.py  emo_room_queue_protocol_draft.md  emo_room_queue_refactor_plan.md  emo_websocket_implementation_guide.md  emo_websocket_protocol_v1.md  flutter_2026-04-05_registration_and_playback_commands.md  flutter_emo_socketio_integration.md  flutter_emo_socketio_subscription.md  flutter_media_stream_strategy_headers.md  flutter_queue_play_item_execution.md  index.rst  logging_integration.rst  recommendation_feedback_backend_implementation.md  scanner_folder_scan_flow.rst  scanner_internal_flow.rst  scanner_public_api.rst  scanner_reference.rst  server_recommendation_feedback_handoff.md  supysonic-logging-system-completion-plan-v3.md  supysonic-logging-system-deep-blueprint-v4.md
docs/handovers/: opencode-to-codex.md
docs/plans/: 2026-04-26-artist-metadata-editing-design.md  2026-04-26-artist-metadata-editing.md  2026-04-28-metadata-inbox-review-task.md  2026-04-28-review-album-artist-autocomplete.md  2026-04-30-daemon-detailed-scan-logging-design.md  2026-04-30-daemon-detailed-scan-logging.md  2026-04-30-web-log-management-design.md  2026-04-30-web-log-management.md  2026-05-01-log-directory-unification-design.md  2026-05-01-log-directory-unification.md  2026-05-01-logging-final-gap-closure-design.md  2026-05-01-logging-final-gap-closure.md  2026-05-01-mainline-logging-gap-closure-design.md  2026-05-01-mainline-logging-gap-closure.md  2026-05-01-metadata-logging-design.md  2026-05-01-metadata-logging.md  2026-05-01-metadata-review-track-editor-design.md  2026-05-01-metadata-review-track-editor.md  2026-05-02-album-ux-enrichment-design.md  2026-05-02-album-ux-enrichment.md  2026-05-02-metadata-review-accordion-track-editor-design.md  2026-05-02-metadata-review-task-scan-coverage.md  (+5 more)
landing/: index.html  styles.css
script/: build_nfo.py  emo_ws_demo.py  queue.json  spotify_main.py
supysonic/: MusicBrainz.py  TaskManger.py  __init__.py  cli.py  client_releases.py  config.py  covers.py  db.py  discogs.py  lastfm.py  listenbrainz.py  logging_manager.py  logging_utils.py  recommend.py  recommendation_feedback.py  scanner.py  scheduler.py  spotify.py  tool.py  watcher.py  web.py
tests/: test_artists_change.py  testbase.py
(+232 files in other folders)
