[metadata]
name = Emosonic Server
version = attr: supysonic.VERSION
url = https://supysonic.readthedocs.io
download_url = https://github.com/jsdfhasuh/supysonic
author = jsdfhasuh
author_email = maintainer@local.invalid
license = GNU AGPLv3
license_files = LICENSE

description = Self-hosted music streaming and operations platform forked from Supysonic
long_description =
    Emosonic Server is a self-hosted music streaming and operations platform,
    forked from [Supysonic][] and maintained by jsdfhasuh.

    Current supported features are:
    * browsing (by folders or tags)
    * streaming of various audio file formats
    * transcoding
    * user or random playlists
    * cover art
    * starred tracks/albums and ratings
    * [Last.FM][lastfm] scrobbling
    * Jukebox mode

    Supysonic currently targets the version 1.10.2 of the Subsonic API. For more
    details, go check the [API implementation status][docs-api].

    [supysonic]: https://github.com/spl0k/supysonic
    [subsonic]: http://www.subsonic.org/
    [lastfm]: https://www.last.fm/
    [docs-api]: https://supysonic.readthedocs.io/en/latest/api.html

long_description_content_type = text/markdown
keywords = subsonic, music, server

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Sound/Audio

[options]
python_requires = >=3.7
install_requires =
    click
    spotipy
    flask >=0.11
    peewee
    Pillow >=9.1.0
    requests >=1.0.0
    mediafile
    pymysql
    watchdog >=0.8.0
    zipstream-ng >=1.1.0, <2.0.0
    flask-socketio >=5.3.0
    python-socketio >=5.11.0

packages = find_namespace:
include_package_data = true
zip_safe = false

[options.packages.find]
include = supysonic*

[options.entry_points]
console_scripts =
    supysonic-cli = supysonic.cli:main
    supysonic-daemon = supysonic.daemon:main
    supysonic-server = supysonic.server:main

[options.data_files]
share/man/man1 = man/*.1
